# optiroute

./: README.md  pyproject.toml  requirements.txt
.github/instructions/: optiroute.instructions.md
optiroute/: main.py
src/: main.py  services.py
