[tool.poetry]
name = "optiroute"
version = "0.1.0"
description = "Shortest path solver API using Google OR-Tools, FastAPI, and Pydantic."
authors = ["Solmon <solmon@gmail.com>"]
license = "MIT"

[tool.poe.tasks]
start = "uvicorn optiroute.main:app --reload"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "^0.110.0"
pydantic = "^2.7.1"
uvicorn = "^0.29.0"
orthools = "^9.9.3963"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
